Parser/parser.output
   0  $accept : %entry% $end

   1  expr : VAR DOT VAR EQ expr
   2       | VAR LBRACK expr RBRACK EQ expr
   3       | VAR EQ expr
   4       | VAR VAR EQ expr
   5       | VAR VAR LPAREN fxn_args RPAREN EQ expr
   6       | INTLIT
   7       | FLOATLIT
   8       | VAR
   9       | VAR DOT VAR
  10       | NOT expr
  11       | SUB expr
  12       | expr ADD expr
  13       | expr SUB expr
  14       | expr MUL expr
  15       | expr DIV expr
  16       | expr MOD expr
  17       | expr POW expr
  18       | expr EQEQ expr
  19       | expr NEQ expr
  20       | expr LT expr
  21       | expr GT expr
  22       | expr LTEQ expr
  23       | expr GTEQ expr
  24       | expr AND expr
  25       | expr OR expr
  26       | expr SEQ expr
  27       | LPAREN expr RPAREN
  28       | VAR LBRACE args RBRACE
  29       | LBRACE args RBRACE
  30       | LBRACK args RBRACK
  31       | VAR LPAREN either_args RPAREN
  32       | IF expr THEN expr ELSE expr

  33  either_args : VARCOLON expr COMMA named_args
  34              | args

  35  fxn_args :
  36           | fxn_args_list

  37  fxn_args_list : VAR VAR
  38                | fxn_args_list COMMA VAR VAR

  39  named_args :
  40             | named_args_list

  41  named_args_list : VARCOLON expr
  42                  | named_args_list COMMA VARCOLON expr

  43  args :
  44       | args_list

  45  args_list : expr
  46            | args_list COMMA expr

  47  typedef : ALIAS VAR EQ VAR
  48          | STRUCT VAR EQ LBRACE fxn_args_list RBRACE

  49  stmt : typedef
  50       | expr

  51  stmts : stmt
  52        | stmts stmt

  53  program : stmts EOF

  54  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (54)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	STRUCT  shift 9
	ALIAS  shift 10
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	program  goto 14
	expr  goto 15
	typedef  goto 16
	stmt  goto 17
	stmts  goto 18


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : SUB . expr  (11)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 19


state 4
	expr : NOT . expr  (10)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 20


state 5
	expr : LPAREN . expr RPAREN  (27)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 21


state 6
	expr : LBRACE . args RBRACE  (29)
	args : .  (43)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	RBRACE  reduce 43

	expr  goto 22
	args  goto 23
	args_list  goto 24


state 7
	expr : LBRACK . args RBRACK  (30)
	args : .  (43)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	RBRACK  reduce 43

	expr  goto 22
	args  goto 25
	args_list  goto 24


state 8
	expr : IF . expr THEN expr ELSE expr  (32)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 26


state 9
	typedef : STRUCT . VAR EQ LBRACE fxn_args_list RBRACE  (48)

	VAR  shift 27
	.  error


state 10
	typedef : ALIAS . VAR EQ VAR  (47)

	VAR  shift 28
	.  error


state 11
	expr : INTLIT .  (6)

	.  reduce 6


state 12
	expr : FLOATLIT .  (7)

	.  reduce 7


state 13
	expr : VAR . DOT VAR EQ expr  (1)
	expr : VAR . LBRACK expr RBRACK EQ expr  (2)
	expr : VAR . EQ expr  (3)
	expr : VAR . VAR EQ expr  (4)
	expr : VAR . VAR LPAREN fxn_args RPAREN EQ expr  (5)
	expr : VAR .  (8)
	expr : VAR . DOT VAR  (9)
	expr : VAR . LBRACE args RBRACE  (28)
	expr : VAR . LPAREN either_args RPAREN  (31)

	EQ  shift 29
	DOT  shift 30
	ADD  reduce 8
	SUB  reduce 8
	MUL  reduce 8
	DIV  reduce 8
	MOD  reduce 8
	POW  reduce 8
	SEQ  reduce 8
	NOT  reduce 8
	LT  reduce 8
	GT  reduce 8
	LTEQ  reduce 8
	GTEQ  reduce 8
	EQEQ  reduce 8
	NEQ  reduce 8
	AND  reduce 8
	OR  reduce 8
	COMMA  reduce 8
	LPAREN  reduce 8
	RPAREN  reduce 8
	LBRACE  reduce 8
	RBRACE  reduce 8
	LBRACK  reduce 8
	RBRACK  reduce 8
	IF  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	STRUCT  reduce 8
	ALIAS  reduce 8
	INTLIT  reduce 8
	FLOATLIT  reduce 8
	VAR  reduce 8
	EOF  reduce 8


state 14
	%entry% : '\001' program .  (54)

	.  reduce 54


15: shift/reduce conflict (shift 36, reduce 50) on SUB
state 15
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)
	stmt : expr .  (50)

	ADD  shift 35
	SUB  shift 36
	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	SEQ  shift 41
	LT  shift 42
	GT  shift 43
	LTEQ  shift 44
	GTEQ  shift 45
	EQEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	NOT  reduce 50
	LPAREN  reduce 50
	LBRACE  reduce 50
	LBRACK  reduce 50
	IF  reduce 50
	STRUCT  reduce 50
	ALIAS  reduce 50
	INTLIT  reduce 50
	FLOATLIT  reduce 50
	VAR  reduce 50
	EOF  reduce 50


state 16
	stmt : typedef .  (49)

	.  reduce 49


state 17
	stmts : stmt .  (51)

	.  reduce 51


state 18
	stmts : stmts . stmt  (52)
	program : stmts . EOF  (53)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	STRUCT  shift 9
	ALIAS  shift 10
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	EOF  shift 50
	.  error

	expr  goto 15
	typedef  goto 16
	stmt  goto 51


state 19
	expr : SUB expr .  (11)
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)

	.  reduce 11


state 20
	expr : NOT expr .  (10)
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)

	.  reduce 10


state 21
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)
	expr : LPAREN expr . RPAREN  (27)

	ADD  shift 35
	SUB  shift 36
	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	SEQ  shift 41
	LT  shift 42
	GT  shift 43
	LTEQ  shift 44
	GTEQ  shift 45
	EQEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	RPAREN  shift 52
	.  error


state 22
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)
	args_list : expr .  (45)

	ADD  shift 35
	SUB  shift 36
	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	SEQ  shift 41
	LT  shift 42
	GT  shift 43
	LTEQ  shift 44
	GTEQ  shift 45
	EQEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	COMMA  reduce 45
	RPAREN  reduce 45
	RBRACE  reduce 45
	RBRACK  reduce 45


state 23
	expr : LBRACE args . RBRACE  (29)

	RBRACE  shift 53
	.  error


state 24
	args : args_list .  (44)
	args_list : args_list . COMMA expr  (46)

	COMMA  shift 54
	RPAREN  reduce 44
	RBRACE  reduce 44
	RBRACK  reduce 44


state 25
	expr : LBRACK args . RBRACK  (30)

	RBRACK  shift 55
	.  error


state 26
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)
	expr : IF expr . THEN expr ELSE expr  (32)

	ADD  shift 35
	SUB  shift 36
	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	SEQ  shift 41
	LT  shift 42
	GT  shift 43
	LTEQ  shift 44
	GTEQ  shift 45
	EQEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	THEN  shift 56
	.  error


state 27
	typedef : STRUCT VAR . EQ LBRACE fxn_args_list RBRACE  (48)

	EQ  shift 57
	.  error


state 28
	typedef : ALIAS VAR . EQ VAR  (47)

	EQ  shift 58
	.  error


state 29
	expr : VAR EQ . expr  (3)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 59


state 30
	expr : VAR DOT . VAR EQ expr  (1)
	expr : VAR DOT . VAR  (9)

	VAR  shift 60
	.  error


state 31
	expr : VAR LPAREN . either_args RPAREN  (31)
	args : .  (43)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	VARCOLON  shift 61
	RPAREN  reduce 43

	expr  goto 22
	args  goto 62
	either_args  goto 63
	args_list  goto 24


state 32
	expr : VAR LBRACE . args RBRACE  (28)
	args : .  (43)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	RBRACE  reduce 43

	expr  goto 22
	args  goto 64
	args_list  goto 24


state 33
	expr : VAR LBRACK . expr RBRACK EQ expr  (2)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 65


state 34
	expr : VAR VAR . EQ expr  (4)
	expr : VAR VAR . LPAREN fxn_args RPAREN EQ expr  (5)

	EQ  shift 66
	LPAREN  shift 67
	.  error


state 35
	expr : expr ADD . expr  (12)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 68


state 36
	expr : expr SUB . expr  (13)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 69


state 37
	expr : expr MUL . expr  (14)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 70


state 38
	expr : expr DIV . expr  (15)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 71


state 39
	expr : expr MOD . expr  (16)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 72


state 40
	expr : expr POW . expr  (17)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 73


state 41
	expr : expr SEQ . expr  (26)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 74


state 42
	expr : expr LT . expr  (20)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 75


state 43
	expr : expr GT . expr  (21)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 76


state 44
	expr : expr LTEQ . expr  (22)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 77


state 45
	expr : expr GTEQ . expr  (23)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 78


state 46
	expr : expr EQEQ . expr  (18)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 79


state 47
	expr : expr NEQ . expr  (19)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 80


state 48
	expr : expr AND . expr  (24)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 81


state 49
	expr : expr OR . expr  (25)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 82


state 50
	program : stmts EOF .  (53)

	.  reduce 53


state 51
	stmts : stmts stmt .  (52)

	.  reduce 52


state 52
	expr : LPAREN expr RPAREN .  (27)

	.  reduce 27


state 53
	expr : LBRACE args RBRACE .  (29)

	.  reduce 29


state 54
	args_list : args_list COMMA . expr  (46)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 83


state 55
	expr : LBRACK args RBRACK .  (30)

	.  reduce 30


state 56
	expr : IF expr THEN . expr ELSE expr  (32)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 84


state 57
	typedef : STRUCT VAR EQ . LBRACE fxn_args_list RBRACE  (48)

	LBRACE  shift 85
	.  error


state 58
	typedef : ALIAS VAR EQ . VAR  (47)

	VAR  shift 86
	.  error


state 59
	expr : VAR EQ expr .  (3)
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)

	ADD  shift 35
	SUB  shift 36
	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	LT  shift 42
	GT  shift 43
	LTEQ  shift 44
	GTEQ  shift 45
	EQEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	SEQ  reduce 3
	NOT  reduce 3
	COMMA  reduce 3
	LPAREN  reduce 3
	RPAREN  reduce 3
	LBRACE  reduce 3
	RBRACE  reduce 3
	LBRACK  reduce 3
	RBRACK  reduce 3
	IF  reduce 3
	THEN  reduce 3
	ELSE  reduce 3
	STRUCT  reduce 3
	ALIAS  reduce 3
	INTLIT  reduce 3
	FLOATLIT  reduce 3
	VAR  reduce 3
	EOF  reduce 3


state 60
	expr : VAR DOT VAR . EQ expr  (1)
	expr : VAR DOT VAR .  (9)

	EQ  shift 87
	ADD  reduce 9
	SUB  reduce 9
	MUL  reduce 9
	DIV  reduce 9
	MOD  reduce 9
	POW  reduce 9
	SEQ  reduce 9
	NOT  reduce 9
	LT  reduce 9
	GT  reduce 9
	LTEQ  reduce 9
	GTEQ  reduce 9
	EQEQ  reduce 9
	NEQ  reduce 9
	AND  reduce 9
	OR  reduce 9
	COMMA  reduce 9
	LPAREN  reduce 9
	RPAREN  reduce 9
	LBRACE  reduce 9
	RBRACE  reduce 9
	LBRACK  reduce 9
	RBRACK  reduce 9
	IF  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	STRUCT  reduce 9
	ALIAS  reduce 9
	INTLIT  reduce 9
	FLOATLIT  reduce 9
	VAR  reduce 9
	EOF  reduce 9


state 61
	either_args : VARCOLON . expr COMMA named_args  (33)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 88


state 62
	either_args : args .  (34)

	.  reduce 34


state 63
	expr : VAR LPAREN either_args . RPAREN  (31)

	RPAREN  shift 89
	.  error


state 64
	expr : VAR LBRACE args . RBRACE  (28)

	RBRACE  shift 90
	.  error


state 65
	expr : VAR LBRACK expr . RBRACK EQ expr  (2)
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)

	ADD  shift 35
	SUB  shift 36
	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	SEQ  shift 41
	LT  shift 42
	GT  shift 43
	LTEQ  shift 44
	GTEQ  shift 45
	EQEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	RBRACK  shift 91
	.  error


state 66
	expr : VAR VAR EQ . expr  (4)

	SUB  shift 3
	NOT  shift 4
	LPAREN  shift 5
	LBRACE  shift 6
	LBRACK  shift 7
	IF  shift 8
	INTLIT  shift 11
	FLOATLIT  shift 12
	VAR  shift 13
	.  error

	expr  goto 92


state 67
	expr : VAR VAR LPAREN . fxn_args RPAREN EQ expr  (5)
	fxn_args : .  (35)

	VAR  shift 93
	RPAREN  reduce 35

	fxn_args  goto 94
	fxn_args_list  goto 95


state 68
	expr : expr . ADD expr  (12)
	expr : expr ADD expr .  (12)
	expr : expr . SUB expr  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)

	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	ADD  reduce 12
	SUB  reduce 12
	SEQ  reduce 12
	NOT  reduce 12
	LT  reduce 12
	GT  reduce 12
	LTEQ  reduce 12
	GTEQ  reduce 12
	EQEQ  reduce 12
	NEQ  reduce 12
	AND  reduce 12
	OR  reduce 12
	COMMA  reduce 12
	LPAREN  reduce 12
	RPAREN  reduce 12
	LBRACE  reduce 12
	RBRACE  reduce 12
	LBRACK  reduce 12
	RBRACK  reduce 12
	IF  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	STRUCT  reduce 12
	ALIAS  reduce 12
	INTLIT  reduce 12
	FLOATLIT  reduce 12
	VAR  reduce 12
	EOF  reduce 12


state 69
	expr : expr . ADD expr  (12)
	expr : expr . SUB expr  (13)
	expr : expr SUB expr .  (13)
	expr : expr . MUL expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . MOD expr  (16)
	expr : expr . POW expr  (17)
	expr : expr . EQEQ expr  (18)
	expr : expr . NEQ expr  (19)
	expr : expr . LT expr  (20)
	expr : expr . GT expr  (21)
	expr : expr . LTEQ expr  (22)
	expr : expr . GTEQ expr  (23)
	expr : expr . AND expr  (24)
	expr : expr . OR expr  (25)
	expr : expr . SEQ expr  (26)

	MUL  shift 37
	DIV  shift 38
	MOD  shift 39
	POW  shift 40
	ADD  reduce 13
	SUB  reduce 13
	SEQ  reduce 13
	NOT  reduce 13
	LT  reduce 13
	GT  reduce 13
	LTEQ  reduce 13
	GTEQ  reduce 13
	EQEQ  reduce 13
	NEQ  reduce 13
	AND  reduce 13
	OR  reduce 13
	COMMA  reduce 13
	LPAREN  reduce 13
	RPAREN  reduce 13
	LBRACE  reduce 13
	RBRACE  reduce 13
	LBRACK  reduce 13
	RBRACK  reduce 13
	IF  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	STRUCT  reduce 13
	ALIAS  reduce 13
	INTLIT  reduce 13
	FLOATLIT  reduce 13
	VAR  reduce 13
	EOF  reduce 13

